--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
-    "mongoose": "^8.15.0"
+    "mongoose": "^8.15.0",
+    "ejs-mate": "^4.0.0",
+    "joi": "^17.13.3",
+    "method-override": "^3.0.0"
   }
 }
